Update diagnosis result

--- a/locales/en.json
+++ b/locales/en.json
@@ -213,6 +213,7 @@
     "take_phone_alert": "Take Picture",
     "cancel": "Cancel",
     "listen": "Listen to the symptopms and treatment",
+    "hands_full": "Hands full? Use the play button to listen.",
     "symptopms": "Symptoms",
     "treatment": "Treatment",
     "picture_captured": "Your picture has been captured!",
