--- a/locales/fr.json
+++ b/locales/fr.json
@@ -213,6 +213,7 @@
       "take_phone_alert": "Prendre une Photo",
       "cancel": "Annuler",
       "listen": "Écouter les symptômes et le traitement",
+      "hands_full": "Les mains occupées ? Utilisez le bouton de lecture pour écouter.",
       "symptopms": "Symptômes",
       "treatment": "Traitement",
       "picture_captured": "Votre photo a été capturée !",
