--- a/locales/rw.json
+++ b/locales/rw.json
@@ -214,6 +214,7 @@
     "take_phone_alert": "Fata Ifoto",
     "cancel": "Hagarika",
     "listen": "Umva ibimenyetso n'ubuvuzi",
+    "hands_full": "Ufite amaboko yuzuye? Koresha buto yo gukina kugira ngo wumve.",
     "symptopms": "Ibimenyetso",
     "treatment": "Ubuvuzi",
     "picture_captured": "Ifoto yawe yafashwe!",
