--- a/locales/en.json
+++ b/locales/en.json
@@ -93,7 +93,7 @@
   },
   "success": {
     "title": "Success!",
-    "passwordReset": "Your password has been reset successfully. You can now log in with your new password.",
+    "passwordReset": "Your account is now ready to use. You can log in with your credentials.",
     "loginButton": "Login"
   },
   "home": {
